<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Converter">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/cardview_dark_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/convertText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/text"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/userInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="@string/hint"
                    android:inputType="number"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent" />

                <Button
                    android:id="@+id/buttonConvert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorButtonBackground"
                    android:text="@string/button_text"
                    android:textColor="@color/colorText" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/converted_circle"
            android:gravity="center"
            android:text="@string/resultPlaceHolder"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/resulteth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:background="@drawable/ethcircle"
            android:gravity="center"
            android:text="@string/resultPlaceHolder"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btcText"
            android:textAlignment="center"
            android:textColor="@color/colorTextBtc"
            android:layout_marginLeft="20dp"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="BTC" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ethText"
            android:textAlignment="center"
            android:textColor="@color/colorTextEtherem"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:text="ETH" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/ebpix" />
</LinearLayout>