<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/heading_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/colorCardBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardMaxElevation="5dp"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:text="@string/btc"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextBtc"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:text="@string/eth"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTextEtherem"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading_layout"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/emptyCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            tools:text="No Rates Found" />

        <ProgressBar
            android:id="@+id/loading"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emptyCurrency"
            android:layout_centerInParent="true"
            android:background="@color/colorButtonBackground"
            android:text="@string/refr"
            android:textColor="@color/colorText"
            android:visibility="gone" />
    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>


